# ai-practice-notes

./: .gitignore  README.md  requirements.txt
notebooks/week1/day2/: 토크나이저_심화_패딩_트런케이션_offset.ipynb
notebooks/week1/day3/: 1.Pipeline_API_추론_흐름.ipynb  2.AutoModel_직접_추론_및_출력_해석.ipynb  3.Attention_Mask_KV_Cache_generate_최적화.ipynb
notebooks/week1/day4/: 1.커스텀_모델_헤드_멀티태스크_앙상블.ipynb  2.Datasets_전처리와_커스텀_데이터셋.ipynb  3.Evaluate_라이브러리_평가_파이프라인.ipynb  4.Trainer_API_파인튜닝_흐름.ipynb
notebooks/week1/day5/: 1.학습_안정성_디버깅과_체크포인트_복구.ipynb  2.LoRA_방식_PEFT_어댑터_구현.ipynb  3.양자화와_증류를_활용한_경량화_비교.ipynb  4.Hugging_Face_Hub_배포_패키지_구성.ipynb  5.인증과_Gated_모델_운영_체크리스트_자동화.ipynb
notebooks/week2/day6/: 1.DeepSeek-R1-Distill-Qwen-1.5B 사용해보기.ipynb  asnfjk.ipynb
notebooks/week2/day8/: 01_data_preparation.ipynb  02_model_training_SFT.ipynb  03_model_training_DPO.ipynb  04_model_evaluation.ipynb  loss_curve.ipynb
notebooks/week2/day9/: [실습]Huggingface Image captioning 모델 Fine-tuning.ipynb
notebooks/week3/day11_api기초/: 1.HTTP 요청 및 응답 확인.ipynb  2.기본 서버 처리 로직 구현.ipynb
notebooks/week3/day13/: 4.chat API 통합 구현.ipynb  (+3 more)
notebooks/week5/day23/실습1/: README.md  client.py  pyproject.toml  server.py
notebooks/week5/day23/실습2/: .env.example  README.md  client.py  host.py  pyproject.toml  server.py
notebooks/week5/day24/실습2/: .gitignore  README.md  client.py  pyproject.toml  server.py
notes/: 01_models_and_training.md  02_api_fastapi_streaming.md  03_langchain_langgraph.md  04_advanced_rag_search.md  05_rag_framework_comparison.md  06_mcp_fastmcp.md  07_mcp_tool_design_and_errors.md  notebook_index.md
(+58 files in other folders)
