[project]
name = "fastmcp-section-2-practice-2-template"
version = "0.1.0"
description = "FastMCP 섹션 2 실습"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.3",
    "fastmcp==3.3.1",
    "httpx==0.28.1",
    "loguru==0.7.3",
    "openai>=1.0.0",
    "pydantic==2.13.4",
    "uvicorn[standard]==0.48.0",
]
